updating resume 2023, some css adjustments, and an updated about me.

--- a/src/index.html
+++ b/src/index.html
@@ -192,27 +192,23 @@
       <hr id="pg4Line">
     </h1>
     <div id="aboutContainer">
-      <div id="aboutText">I am primarily a Front-end React Developer who spent years in the class room as an educator.
-        This experience as a Band Director gave me a plethora of unique skills that I apply daily as a developer such
-        as: communication, punctuality, ingenuity, and tenacity. I enjoy to write clean
-        succinct code that functions well to create vast projects. The design aspect of web development is incredibly
-        enjoyable for me. I love learning which comes in handy when I am learning new technologies or improving my
-        skills. <br><br>I have contributed to the <a class="aboutLinks" href="https://www.reactjsdallas.com/"
-          target="_blank">ReactJS Dallas</a> open source website
-        which serves around 600 members currently. Most of my education has come from <a class="aboutLinks"
-          href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e" target="_blank">freecodecamp</a>,
-        <a class="aboutLinks" href="https://www.udemy.com/" target="_blank">Udemy.com</a>, and mentorship from several
-        established developers in the area.<br><br> I hope to find a
-        collaborative team to work alongside where I can grow and
-        contribute. I am passionate about
-        learning and education and wish to
-        carry that passion with me as I
-        continue to improve my skillset. I
-        also hope to make a positive and
-        impactful difference in the world
-        through my work in the field of web
-        development.
+      <div id="aboutText"> I'm a dynamic Front-end React Developer with a unique background in education, bringing
+        transferable skills such as communication, punctuality, ingenuity, and tenacity to my work. I specialize in
+        writing clean, succinct code to create vast projects and enjoy the design aspect of web development. As a
+        curious learner, I am constantly expanding my skills and knowledge in new technologies.<br><br>
 
+        During my time in the industry, I have evaluated CMS frameworks, presented my findings to the team, and
+        contributed to the implementation of a migration plan to a new framework. I take pride in solving problems and
+        increasing process visibility, as demonstrated in my work on an internal tool for a module-based CMS
+        application, resulting in time savings of 10-20 minutes.<br><br>
+
+        I am an expert in A/B experiments, funnel metrics optimization, and process visibility. I have effectively
+        managed experimentation infrastructure with LaunchDarkly, building multivariate and mutually exclusive
+        experiments, and managed a custom SDK. Utilizing React with TypeScript, I have developed responsive design
+        experiments and effectively monitored A/B and split-url experiments with VWO, leading to notable enhancements in
+        conversion rate and funnel engagement by 16.37% and 5%, respectively. One of my proudest achievements has been
+        leading the initiative to switch from VWO to Launchdarkly, which provided better control over experiments by
+        enabling the ability to turn flags on and off.
       </div><img id="aboutPic" src="images/aboutme.jpg">
     </div>
   </div>
